add page content to artwork page

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,8 +1,8 @@
 @import "~bootstrap/less/bootstrap.less";
 
-.row > div{
-	background-color: @gray;
-	h1{
-		color: @brand-success;
-	}
+a.block-link{
+	display: block;
+}
+.full-width{
+	width:100%;
 }
