--- a/src/styles.less
+++ b/src/styles.less
@@ -1,4 +1,5 @@
 @import "~bootstrap/less/bootstrap.less";
+@import "block-grid.less";
 
 a.block-link{
 	display: block;
@@ -6,3 +7,4 @@ a.block-link{
 .full-width{
 	width:100%;
 }
+
