--- a/src/styles.less
+++ b/src/styles.less
@@ -2,7 +2,7 @@
 @import "variables.less";
 @import "block-grid.less";
 
-@media: "../build/media";
+@media: "./media";
 
 h2{
 	padding-bottom: 22px;
