--- a/src/styles.less
+++ b/src/styles.less
@@ -132,9 +132,13 @@ h2{
 	justify-content: center;
 
 	img{
-		.border-image;
 		max-width: 100%;
 		max-height: 100%;
+		@supports (object-fit: scale-down) {
+			width: 100%;
+			height: 100%;
+			object-fit: scale-down;
+		}
 	}
 	// .art-description{
 	// 	padding: @grid-gutter-width/2 0;
